fix: set .game-board to no-wrap

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 .game-board {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: no-wrap;
   height: 180px;
   width: 180px;
   border: 1px solid black;
